<resources>
    <string name="app_name">GB_Calculator_App</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_minus">-</string>
    <string name="key_division">/</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_plus">+</string>
    <string name="key_multiply">x</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_result">=</string>
    <string name="key_clear">c</string>
    <string name="key_dot">.</string>
    <string name="key_0">0</string>
    <string name="output_text">0</string>
    <string name="input_text"> </string>
    <string name="c">C</string>
    <string name="_7">7</string>
    <string name="themeButton">Настройки темы</string>
    <string name="lighModeText">Дневной режим</string>
</resources>