<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/darkBackground"
    android:columnCount="5"
    android:paddingHorizontal="8dp"
    android:rowCount="4"
    android:useDefaultMargins="true">

    <!--  Первая строка -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn7"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:text="@string/key_7"
        style="@style/Calculator_Button"
         />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn8"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:text="@string/key_8"
        style="@style/Calculator_Button"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn9"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:text="@string/key_9"
       style ="@style/Calculator_Button"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_minus"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:layout_column="3"
        android:layout_columnWeight="1"
        android:text="@string/key_minus"
        style="@style/Round_Button"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_division"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:layout_column="4"
        android:layout_columnWeight="1"
        android:text="@string/key_division"
        app:cornerRadius="50dp"
        style="@style/Round_Button"/>

    <!--  Вторая строка -->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn4"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:text="@string/key_4"
        style="@style/Calculator_Button"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn5"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:text="@string/key_5"
        style="@style/Calculator_Button"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn6"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:text="@string/key_6"
        style="@style/Calculator_Button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_plus"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_row="1"
        android:layout_rowSpan="2"
        android:layout_rowWeight="1"
        android:layout_column="3"
        android:layout_columnWeight="1"
        android:text="@string/key_plus"
        style="@style/Round_Button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_multiply"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_row="1"
        android:layout_rowSpan="2"
        android:layout_rowWeight="1"
        android:layout_column="4"
        android:layout_columnWeight="1"
        android:text="@string/key_multiply"
        style="@style/Round_Button" />

    <!--  Третья строка -->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn1"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_row="2"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:text="@string/key_1"
        style="@style/Calculator_Button"
         />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn2"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_row="2"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:text="@string/key_2"
        style="@style/Calculator_Button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn3"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_row="2"
        android:layout_rowWeight="1"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:text="@string/key_3"
        style="@style/Calculator_Button" />

    <!--  Четвертая строка -->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn0"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_row="3"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:text="@string/key_0"
        style="@style/Calculator_Button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_dot"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_row="3"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:text="@string/key_dot"
        style="@style/Calculator_Button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_clear"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:text="@string/key_clear"
        style="@style/Calculator_Button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_result"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_rowWeight="1"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:text="@string/key_result"
        style="@style/Round_Button" />

</GridLayout>