<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="MainActivity">

    <TextView
        android:id="@+id/input_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:gravity="end"
        android:padding="10dp"
        android:text="@string/input_text"
        style="?attr/inputTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/output_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:gravity="end"
        android:padding="10dp"
        android:text="@string/output_text"
        style="?attr/outputTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_screen"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="5"
        android:paddingHorizontal="8dp"
        android:rowCount="4"
        android:useDefaultMargins="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/output_text">

        <!--  Первая строка -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn7"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/key_7"
            style="?attr/numericButtonStyle"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn8"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:text="@string/key_8"
            style="?attr/numericButtonStyle"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn9"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:text="@string/key_9"
            style="?attr/numericButtonStyle"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_minus"
            style="?attr/actionButtonStyle"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:text="@string/key_minus" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_division"
            style="?attr/actionButtonStyle"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="4"
            android:layout_columnWeight="1"
            android:text="@string/key_division" />

        <!--  Вторая строка -->

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn4"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/key_4"
            style="?attr/numericButtonStyle"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn5"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:text="@string/key_5"
            style="?attr/numericButtonStyle"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn6"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:text="@string/key_6"
            style="?attr/numericButtonStyle"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_plus"
            style="?attr/actionButtonStyle"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:layout_row="1"
            android:layout_rowSpan="2"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:text="@string/key_plus"
            android:textSize="40sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_multiply"
            style="?attr/actionButtonStyle"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:layout_row="1"
            android:layout_rowSpan="2"
            android:layout_rowWeight="1"
            android:layout_column="4"
            android:layout_columnWeight="1"
            android:text="@string/key_multiply" />

        <!--  Третья строка -->

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn1"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/key_1"
            style="?attr/numericButtonStyle"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn2"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:text="@string/key_2"
            style="?attr/numericButtonStyle"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn3"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:text="@string/key_3"
            style="?attr/numericButtonStyle"/>

        <!--  Четвертая строка -->

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn0"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/key_0"
            style="?attr/numericButtonStyle"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_dot"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:text="@string/key_dot"
            style="?attr/numericButtonStyle"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_clear"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/key_clear"
            style="?attr/numericButtonStyle"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_result"
            style="?attr/actionButtonStyle"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:layout_rowWeight="1"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:text="@string/key_result"
            />
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>