<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/darkGrey"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:paddingEnd="30dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:text=""
            android:layout_gravity="end"
            android:textAlignment="textEnd"
            android:textSize="30sp"
            android:id="@+id/workingsTextView"
            tools:ignore="NestedWeights,RtlCompat,RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:paddingEnd="30dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:text=""
            android:textAlignment="textEnd"
            android:layout_gravity="end"
            android:textSize="45sp"
            android:id="@+id/resultTextView"
            tools:ignore="RtlCompat,RtlSymmetry" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:ignore="NestedWeights">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/red"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/key_clear"/>



            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/orange"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/key_division"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/white"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/key_7"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/white"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/key_8"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/white"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/key_9"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/orange"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/key_multiply"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/white"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/key_4"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/white"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/key_5"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/white"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/key_6"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/orange"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/key_minus"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/white"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/key_1"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/white"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/key_2"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/white"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/key_3"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/orange"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/key_plus"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/white"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/key_dot"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/white"
                android:text="@string/key_0"
                style="?android:attr/borderlessButtonStyle"
                tools:ignore="ButtonStyle" />

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/key_result"
                android:textColor="@color/orange"
                android:textSize="40sp"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>